--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "thingengineer/mysqli-database-class": "^2.9.3",
         "ext-json": "*",
         "phpmailer/phpmailer": "^6.5",
-        "firebase/php-jwt": "^5.5",
-        "google/apiclient": "2.12.1"
+        "firebase/php-jwt": "^5.5"
     },
     "type": "library",
     "autoload": {
