--- a/.htaccess.example
+++ b/.htaccess.example
@@ -1,7 +1,7 @@
 AddDefaultCharset UTF-8
 
 <IfModule mod_headers.c>
-    Header set Access-Control-Allow-Origin *
+    # Header set Access-Control-Allow-Origin *
     Header set Access-Control-Allow-Methods: "GET,POST,OPTIONS,DELETE,PUT"
     Header set Access-Control-Allow-Headers: "Origin, X-Requested-With, Content-Type, Accept, Authorization, UID, SID"
 </IfModule>
