--- a/.htaccess.example
+++ b/.htaccess.example
@@ -12,10 +12,10 @@ RewriteBase /
 
 RewriteRule .* - [e=HTTP_AUTHORIZATION:%{HTTP:Authorization}] # Fix empty $_SERVER['HTTP_AUTHORIZATION'] - https://stackoverflow.com/questions/2902621/fetching-custom-authorization-header-from-incoming-php-request/46323802#46323802
 
-RewriteRule ^backend/index\.php$ - [L]
+RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . backend/index.php [L]
+RewriteRule . index.php [L]
 </IfModule>
 
 php_flag display_startup_errors on
