--- a/.htaccess.example
+++ b/.htaccess.example
@@ -3,7 +3,7 @@ AddDefaultCharset UTF-8
 <IfModule mod_headers.c>
     # Header set Access-Control-Allow-Origin *
     Header set Access-Control-Allow-Methods: "GET,POST,OPTIONS,DELETE,PUT"
-    Header set Access-Control-Allow-Headers: "Origin, X-Requested-With, Content-Type, Accept, Authorization, UID, SID"
+    Header set Access-Control-Allow-Headers: "Origin, X-Requested-With, Content-Type, Accept, Authorization, Frontend-Base-Url, UID, SID"
 </IfModule>
 
 <IfModule mod_rewrite.c>
