--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,26 @@
 {
-    "name": "adjai/backender",
-    "description": "Simple backend",
-    "version": "0.0.40",
-    "license": "GPL-2.0-or-later",
-    "minimum-stability": "stable",
-    "authors": [
-        {
-            "name": "mx-studio",
-            "email": "bin_rob@mail.ru"
-        }
-    ],
-    "require": {
-        "thingengineer/mysqli-database-class": "^2.9.3",
-        "ext-json": "*",
-        "phpmailer/phpmailer": "^6.5",
-        "firebase/php-jwt": "^5.5",
-        "rmccue/requests": "^2.0.2"
-    },
-    "type": "library",
-    "autoload": {
-        "files": ["backender.php"]
-    }
+	"name": "adjai/backender",
+	"description": "Simple backend",
+	"version": "0.0.41",
+	"license": "GPL-2.0-or-later",
+	"minimum-stability": "stable",
+	"authors": [
+		{
+			"name": "mx-studio",
+			"email": "bin_rob@mail.ru"
+		}
+	],
+	"require": {
+		"thingengineer/mysqli-database-class": "^2.9.3",
+		"ext-json": "*",
+		"phpmailer/phpmailer": "^6.5",
+		"firebase/php-jwt": "^5.5",
+		"rmccue/requests": "^2.0.2"
+	},
+	"type": "library",
+	"autoload": {
+		"files": [
+			"backender.php"
+		]
+	}
 }
