--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "adjai/backender",
     "description": "Simple backend",
-    "version": "0.0.51",
+    "version": "0.0.52",
     "license": "GPL-2.0-or-later",
     "minimum-stability": "stable",
     "authors": [
@@ -19,6 +19,16 @@
     },
     "type": "library",
     "autoload": {
+        "psr-4": {
+            "mx\\CLIUtils\\": "cli"
+        },
         "files": ["backender.php"]
+    },
+    "scripts": {
+        "post-install-cmd": ["mx\\CLIUtils\\CLIUtils::postInstallCmd"],
+        "post-update-cmd": ["mx\\CLIUtils\\CLIUtils::postUpdateCmd"],
+        "post-root-package-install": ["mx\\CLIUtils\\CLIUtils::postRootPackageInstall"],
+        "post-package-install": ["mx\\CLIUtils\\CLIUtils::postPackageInstall"],
+        "post-package-update": ["mx\\CLIUtils\\CLIUtils::postPackageUpdate"]
     }
 }
