--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "adjai/backender",
     "description": "Simple backend",
-    "version": "0.0.71",
+    "version": "0.0.72",
     "license": "GPL-2.0-or-later",
     "minimum-stability": "stable",
     "authors": [
@@ -25,6 +25,6 @@
         "files": ["backender.php"]
     },
     "scripts": {
-
+        "composer-update": "composer-update.cmd"
     }
 }
