--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "adjai/backender",
     "description": "Simple backend",
-    "version": "0.0.115",
+    "version": "0.0.116",
     "license": "GPL-2.0-or-later",
     "minimum-stability": "stable",
     "authors": [
@@ -16,7 +16,8 @@
         "phpmailer/phpmailer": "^6.5",
         "firebase/php-jwt": "^5.5",
         "rmccue/requests": "^2.0.2",
-      "ext-mbstring": "*"
+      "ext-mbstring": "*",
+        "ext-zip": "*"
     },
     "type": "library",
     "autoload": {
